--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "mini-app-package",
+  "name": "@duythanhpham1811/mini-app-package",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/duythanhpham1811/mini_app_module.git"
   },
   "author": "",
   "license": "ISC"
